# TriangleOps

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  README.md  pyproject.toml
assets/: attn_pair_bias.csv  triangle_attn.csv  triangle_mul.csv
assets/incoming/: triangle_mul.csv
benchmarks/: harness.py  references.py  sweep.py
tests/: conftest.py  test_attn_pair_bias.py  test_triangle_attn.py  test_triangle_mul.py
triangle_ops/: __init__.py
triangle_ops/_common/: __init__.py  dtype.py  layouts.py  ln_absorption.py
triangle_ops/attn_pair_bias/: __init__.py  kernel.py  module.py
triangle_ops/triangle_attn/: __init__.py  kernel.py  module.py
triangle_ops/triangle_mul/: __init__.py  kernel.py  module.py
